--- a/src/Cindy/Cindy/Cindy.csproj
+++ b/src/Cindy/Cindy/Cindy.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Storages\Storages.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Reference Include="UnityEditor">
+      <HintPath>..\libs\UnityEditor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\libs\UnityEngine.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cindy.Strings\Cindy.Strings.csproj" />
+    <ProjectReference Include="..\Storages\Cindy.Storages.csproj" />
   </ItemGroup>
 
 </Project>
