--- a/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
+++ b/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Storages\Cindy.Storages.csproj" />
+    <ProjectReference Include="..\Cindy.Storages\Cindy.Storages.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
 
