--- a/src/Cindy/Cindy.Control/Cindy.Control.csproj
+++ b/src/Cindy/Cindy.Control/Cindy.Control.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -17,6 +17,10 @@
       <HintPath>..\libs\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cindy.Util\Cindy.Util.csproj" />
   </ItemGroup>
 
 </Project>
