--- a/src/Cindy/Cindy.Storages/Cindy.Storages.csproj
+++ b/src/Cindy/Cindy.Storages/Cindy.Storages.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cindy.Util\Cindy.Util.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
       <Private>false</Private>
