--- a/src/Cindy/Cindy.Util/Cindy.Util.csproj
+++ b/src/Cindy/Cindy.Util/Cindy.Util.csproj
@@ -1,13 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Cindy.Storages\Cindy.Storages.csproj" />
-    <ProjectReference Include="..\Cindy.Util\Cindy.Util.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="UnityEngine.CoreModule">
