--- a/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
+++ b/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cindy.Core\Cindy.Core.csproj" />
     <ProjectReference Include="..\Cindy.Storages\Cindy.Storages.csproj" />
-    <ProjectReference Include="..\Cindy.Util\Cindy.Util.csproj" />
   </ItemGroup>
 
   <ItemGroup>
