--- a/src/Cindy/Cindy/Cindy.csproj
+++ b/src/Cindy/Cindy/Cindy.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Cindy.Control\Cindy.Control.csproj" />
     <ProjectReference Include="..\Cindy.Core\Cindy.Core.csproj" />
+    <ProjectReference Include="..\Cindy.ItemSystem\Cindy.ItemSystem.csproj" />
     <ProjectReference Include="..\Cindy.Storages\Cindy.Storages.csproj" />
     <ProjectReference Include="..\Cindy.Strings\Cindy.Strings.csproj" />
     <ProjectReference Include="..\Cindy.UI\Cindy.UI.csproj" />
