--- a/src/Cindy/Cindy.ItemSystem/Cindy.ItemSystem.csproj
+++ b/src/Cindy/Cindy.ItemSystem/Cindy.ItemSystem.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Cindy.Core\Cindy.Core.csproj" />
     <ProjectReference Include="..\Cindy.Storages\Cindy.Storages.csproj" />
+    <ProjectReference Include="..\Cindy.UI\Cindy.UI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
