--- a/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
+++ b/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
 
