--- a/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
+++ b/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
@@ -13,6 +13,10 @@
       <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.PhysicsModule">
+      <HintPath>..\libs\UnityEngine.PhysicsModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
