--- a/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
+++ b/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
@@ -17,6 +17,10 @@
       <HintPath>..\libs\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\libs\UnityEngine.UI.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
