Finder、AudioController、AudioVloumeSetter

--- a/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
+++ b/src/Cindy/Cindy.Logic/Cindy.Logic.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>..\libs\UnityEngine.AudioModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
       <Private>false</Private>
