--- a/src/Cindy/Cindy.Core/Cindy.Core.csproj
+++ b/src/Cindy/Cindy.Core/Cindy.Core.csproj
@@ -19,6 +19,10 @@
       <HintPath>..\libs\UnityEngine.InputLegacyModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.JSONSerializeModule">
+      <HintPath>..\libs\UnityEngine.JSONSerializeModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>..\libs\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>false</Private>
