--- a/src/Cindy/Cindy.ItemSystem/Cindy.ItemSystem.csproj
+++ b/src/Cindy/Cindy.ItemSystem/Cindy.ItemSystem.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Hansin1997 &lt;845612500@qq.com&gt;</Authors>
+    <Product>ItemSystem</Product>
+    <Description>Item system module base on Cindy framework.</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
