--- a/src/Cindy/Cindy.UI/Cindy.UI.csproj
+++ b/src/Cindy/Cindy.UI/Cindy.UI.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Hansin1997 &lt;845612500@qq.com&gt;</Authors>
+    <Description>UI Module</Description>
+    <Product>Cindy</Product>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
