--- a/src/Cindy/Cindy.Core/Cindy.Core.csproj
+++ b/src/Cindy/Cindy.Core/Cindy.Core.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Cindy.Core</AssemblyName>
     <RootNamespace>Cindy</RootNamespace>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Authors>Hansin1997 &lt;845612500@qq.com&gt;</Authors>
+    <Company></Company>
+    <Product>Cindy</Product>
+    <Description>Core Module</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
