修复Json序列化问题，必须为反序列化的类添加默认构造方法。

--- a/src/UnitySDK/Assembly-CSharp.csproj
+++ b/src/UnitySDK/Assembly-CSharp.csproj
@@ -62,7 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Cindy\Examples\UI\Form\NewBehaviourScript.cs" />
+    <Compile Include="Assets\Cindy\Examples\Storage\StorableObject\TransfromStorableObject\PlayerPrefStorage\NewBehaviourScript.cs" />
     <None Include="Assets\Cindy\Examples\UI\Strings\StringSource\XmlString.xml" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>D:/Documents/GITHUB/Cindy/src/UnitySDK/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
