更改各种接口数据获取或者赋值为异步回调方式，与其相关的原本的实现类通通修改成协程模式，相关使用方改成异步方式。 新增WebXmlStringSource用于获取互联网Xml资源。

--- a/src/Cindy/Cindy.Storages/Cindy.Storages.csproj
+++ b/src/Cindy/Cindy.Storages/Cindy.Storages.csproj
@@ -26,6 +26,10 @@
       <HintPath>..\libs\UnityEngine.JSONSerializeModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.UnityWebRequestModule">
+      <HintPath>..\libs\UnityEngine.UnityWebRequestModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
