--- a/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
+++ b/src/Cindy/Cindy.Strings/Cindy.Strings.csproj
@@ -20,6 +20,10 @@
       <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.UnityWebRequestModule">
+      <HintPath>..\libs\UnityEngine.UnityWebRequestModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
